--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "bun --watch src/server.ts",
     "start": "bun src/server.ts",
-    "prisma:generate": "node scripts/merge-prisma.js && bunx --bun prisma generate"
+    "prisma:generate": "node scripts/merge-prisma.ts && bunx --bun prisma generate"
   },
   "devDependencies": {
     "@types/bun": "latest",
@@ -24,12 +24,15 @@
   "dependencies": {
     "@prisma/adapter-pg": "^7.4.0",
     "@prisma/client": "^7.4.0",
+    "axios": "^1.13.5",
     "cors": "^2.8.6",
     "express": "^5.2.1",
     "helmet": "^8.1.0",
+    "jose": "^6.1.3",
     "morgan": "^1.10.1",
     "pg": "^8.18.0",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "zod": "^4.3.6"
   }
 }
