keycloak bugs fixed. user model updated. middleware error throw structure fixed. login and registed successed by test

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "bun --watch src/server.ts",
     "start": "bun src/server.ts",
-    "prisma:generate": "node scripts/merge-prisma.ts && bunx --bun prisma generate"
+    "prisma:generate": "bun scripts/merge-prisma.ts && bunx --bun prisma generate"
   },
   "devDependencies": {
     "@types/bun": "latest",
