services and controllers directories removed. module directory created. user service and module moved to user module. tscofig updated for this changes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,14 +28,12 @@
 
     // Path aliases
     "paths": {
-      "@controllers": ["./src/controllers"],
       "@routes": ["./src/routes"],
-      "@services": ["./src/services"],
       "@lib": ["./src/lib"],
       "@middlewares": ["./src/middlewares"],
       "@config": ["./src/config"],
+      "@utils": ["./src/utils"],
       "@schemas": ["./src/schemas"],
-      "@auth": ["./src/modules/auth"]
     }
   }
 }
